--- a/package.json
+++ b/package.json
@@ -4,40 +4,47 @@
   "description": "Личный проект «Седона» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "autoprefixer": "10.4.0",
-    "browser-sync": "2.27.7",
+    "autoprefixer": "10.3.1",
+    "browser-sync": "2.27.5",
+    "del": "6.0.0",
     "gulp": "4.0.2",
+    "gulp-htmlmin": "5.0.1",
     "gulp-dart-sass": "^1.0.2",
+    "gulp-libsquoosh": "^1.0.9",
     "gulp-plumber": "1.2.1",
-    "gulp-postcss": "9.0.1",
-    "postcss": "8.3.11",
+    "gulp-postcss": "9.0.0",
+    "gulp-rename": "2.0.0",
+    "gulp-stacksvg": "2.0.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-terser": "2.0.1",
+    "gulp-webp": "4.0.1",
+    "postcss": "8.3.6",
+    "postcss-csso": "5.0.1",
     "stylelint": "13.13.1",
-    "stylelint-config-htmlacademy": "0.1.11"
+    "stylelint-config-htmlacademy": "0.1.10"
   },
-  "scripts": {
-    "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "lint": "npm run editorconfig && npm run stylelint",
-    "build": "gulp styles",
-    "start": "gulp"
-  },
-  "browserslist": [
-    "last 2 versions",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all",
-    "not < 0.25%"
-  ],
-  "editorconfig-cli": [
-    "*.json",
-    "*.js",
-    "source/*.html",
-    "source/js/**/*.js",
-    "source/img/**/*.svg",
-    "source/sass/**/*.scss"
-  ],
-  "engines": {
-    "node": "^16"
-  },
-  "type": "module"
+"scripts": {
+  "editorconfig": "editorconfig-cli",
+  "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+  "lint`": "npm run editorconfig && npm run stylelint",
+  "build": "gulp build",
+  "start": "gulp"
+},
+"browserslist": [
+  "last 2 versions",
+  "not dead",
+  "not ie <= 11"
+],
+"editorconfig-cli": [
+  "*.json",
+  "*.js",
+  "source/*.html",
+  "source/js/**/*.js",
+  "source/img/**/*.svg",
+  "source/less/**/*.scss"
+],
+"engines": {
+  "node": "^16"
+},
+"type": "module"
 }
