--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 "scripts": {
   "editorconfig": "editorconfig-cli",
   "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-  "lint`": "npm run editorconfig && npm run stylelint",
+  "lint": "npm run editorconfig && npm run stylelint",
   "build": "gulp build",
   "start": "gulp"
 },
