--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,14 @@
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches: '*'
 
 name: Project build
 jobs:
   check:
-    name: Check
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Set up Node.js
