--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "browser-sync": "2.27.5",
     "del": "6.0.0",
     "gulp": "4.0.2",
-    "gulp-htmlmin": "5.0.1",
     "gulp-dart-sass": "^1.0.2",
+    "gulp-htmlmin": "5.0.1",
     "gulp-libsquoosh": "^1.0.9",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
@@ -23,28 +23,35 @@
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.10"
   },
-"scripts": {
-  "editorconfig": "editorconfig-cli",
-  "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-  "lint": "npm run editorconfig && npm run stylelint",
-  "build": "gulp build",
-  "start": "gulp"
-},
-"browserslist": [
-  "last 2 versions",
-  "not dead",
-  "not ie <= 11"
-],
-"editorconfig-cli": [
-  "*.json",
-  "*.js",
-  "source/*.html",
-  "source/js/**/*.js",
-  "source/img/**/*.svg",
-  "source/less/**/*.scss"
-],
-"engines": {
-  "node": "^16"
-},
-"type": "module"
+  "scripts": {
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+    "lint": "npm run editorconfig && npm run stylelint",
+    "build": "gulp build",
+    "start": "gulp",
+    "build:sass": "sass source/sass:public/static/css",
+    "build:eleventy": "ELEVENTY_ENV=development eleventy",
+    "build:github": "npm run build:eleventy & npm run build:sass"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not ie <= 11"
+  ],
+  "editorconfig-cli": [
+    "*.json",
+    "*.js",
+    "source/*.html",
+    "source/js/**/*.js",
+    "source/img/**/*.svg",
+    "source/less/**/*.scss"
+  ],
+  "engines": {
+    "node": "^16"
+  },
+  "type": "module",
+  "dependencies": {
+    "@11ty/eleventy": "2.0.1",
+    "sass": "1.70.0"
+  }
 }
