--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "start": "gulp",
     "build:sass": "sass source/sass:public/static/css",
     "build:eleventy": "ELEVENTY_ENV=development eleventy",
-    "build:github": "npm run build:eleventy & npm run build:sass"
+    "build:github": "npm run build:eleventy & npm run build:sass",
+    "build:sass:prod": "sass source/sass:public/static/css --style compressed",
+    "build:eleventy:prod": "ELEVENTY_ENV=production eleventy",
+    "build:prod": "npm run build:eleventy:prod & npm run build:sass:prod"
   },
   "browserslist": [
     "last 2 versions",
