--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies & build
         run: |
           npm ci
-          npm run build
+          npm run build:github
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.8.0
         with:
