--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "gulp",
-    "build:sass": "sass --style=compressed source/sass build/css/style.min.css",
+    "build:sass": "sass --style=compressed source/sass:build/css",
     "build:eleventy": "eleventy",
     "build:github": "npm run build:eleventy & npm run build:sass"
   },
