--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "10.3.1",
     "browser-sync": "2.27.5",
     "del": "6.0.0",
+    "gh-pages": "^6.1.1",
     "gulp": "4.0.2",
     "gulp-dart-sass": "^1.0.2",
     "gulp-gh-pages": "^0.5.4",
@@ -30,7 +31,7 @@
     "lint": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "gulp",
-    "deploy": "gulp build && gh-pages -d build"
+    "deploy": "npm run build && gulp deploy"
   },
   "browserslist": [
     "last 2 versions",
